Fix screenshot image flicker
Display old image until new image finished loading.

--- a/css/main.css
+++ b/css/main.css
@@ -38,8 +38,19 @@ div.icon.selected {
     background-color: silver;
 }
 
-.icon img {
+#vms div img {
+    display: none;
+    margin-left: auto;
+    margin-right: auto;
+    width: 128px;
+    height: 128px;
+}
+
+#vms div img.active {
     display: block;
+}
+
+.icon img {
     margin-left: auto;
     margin-right: auto;
     width: 128px;
